--- a/package.json
+++ b/package.json
@@ -19,11 +19,19 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "auth0": "^2.19.0",
     "axios": "^0.18.0",
+    "cookieparser": "^0.1.0",
+    "dotenv": "^8.1.0",
     "express": "^4.16.3",
+    "express-session": "^1.16.2",
+    "flash": "^1.1.0",
     "gh-pages": "^2.1.1",
     "if-env": "^1.0.4",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.2.1",
+    "pug": "^2.0.4",
     "sequelize": "^5.16.0"
   }
 }
