--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "express": "^4.16.3",
     "gh-pages": "^2.1.1",
     "if-env": "^1.0.4",
-    "mysql2": "^1.6.5",
-    "sequelize": "^5.16.0"
+    "mdbreact": "^4.19.1",
+    "mysql2": "^1.7.0",
+    "sequelize": "^5.17.1"
   }
 }
